using remote github repo as role and having sk man installation

--- a/playbook.yml
+++ b/playbook.yml
@@ -15,8 +15,10 @@
   remote_user: ansible
   become: yes
   vars_files:
-    - versions.yml
+    - variables.yml
   roles: # order does matter
     - role: "compressiontools"
     - role: "scm"
-    
+    - role: "gantsign.sdkman"
+      sdkman_users:
+        - "bigbird023"
