--- a/playbook.yml
+++ b/playbook.yml
@@ -53,4 +53,6 @@
       #   - candidate: java
       #     name: javac
       #     link: /usr/bin/javac
+    - role: ansible-role-golang
+    #- role: go-tools
 
